# zone-detect-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: release.yml  rust.yml
examples/: demo.rs
src/: gen.rs  lib.rs  sys.rs
tests/: compare.rs
