[package]
name = "zone-detect"
version = "1.0.1"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nicholasbishop/zone-detect-rs"
description = "Rust version of the ZoneDetect C library."
keywords = ["time", "zone", "timezone"]
categories = ["date-and-time"]

[dependencies]
thiserror = { version = "1.0.30", default-features = false }

[dev-dependencies]
clap = { version = "4.0.0", default-features = false, features = ["derive", "help", "std", "usage"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
